--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        spring.json.trusted.packages: com.example.kafka.integration.demo.application.model
+        spring.json.trusted.packages: com.example.kafka.integration.demo.model
   integration:
     kafka:
       topic:
